--- a/Resume.tex
+++ b/Resume.tex
@@ -7,6 +7,7 @@
 \usepackage[margin=0.5in] {geometry}
 \usepackage{multicol}
 \usepackage{hyperref}
+\usepackage{graphicx}
 
 
 %section
@@ -63,7 +64,12 @@ Contact: +91-7798497481\\
 E-mail Id: aditya.bichave@gmail.com\\
 Github: \url{https://github.com/Aditya-Bichave}
 \end{flushright}
+\noindent
+\hspace{10em}
+\includegraphics[width = 8em]{Aditya.jpg}
+
 \end{multicols}
+
 
 
 }
