Soft Skill Formate Improved.

--- a/Resume.tex
+++ b/Resume.tex
@@ -136,12 +136,16 @@ To seek a challenging position as a Machine Learning Engineering with an organiz
 			PyTorch,Tensorflow,Keras, OpenCV,Android Studio,Atmel Studio,Arduino
 
 \section{Soft Skills}
-	\begin{tabular}{ l l }
-	$\bullet$\large{Confident} & 	$\bullet$\large{Problem Solving}\\
-	$\bullet$\large{Motivated} &	$\bullet$\large{Curious}\\
-	$\bullet$\large{Persistent} &	$\bullet$\large{Teamwork}\\
+	\begin{multicols}{2}
+	$\bullet$\large{Confident} \\
+ 	$\bullet$\large{Problem Solving}\\
+	$\bullet$\large{Motivated}\\ 
+	$\bullet$\large{Curious}\\
+	\columnbreak
+	$\bullet$\large{Persistent} \\
+	$\bullet$\large{Teamwork}\\
 	$\bullet$\large{Self-managment}\\
-	\end{tabular}
+	\end{multicols}
 
 
 \section{Extra-curricular Activities}
