Soft Skill Formate Improved.

--- a/Resume.tex
+++ b/Resume.tex
@@ -119,7 +119,7 @@ To seek a challenging position as a Machine Learning Engineering with an organiz
 \end{tabular} 
 
 \section{Projects}
-
+	
 
 
 \section{Training \& Internship}
@@ -137,14 +137,16 @@ To seek a challenging position as a Machine Learning Engineering with an organiz
 
 \section{Soft Skills}
 	\begin{multicols}{2}
-	$\bullet$\large{Confident} \\
- 	$\bullet$\large{Problem Solving}\\
-	$\bullet$\large{Motivated}\\ 
-	$\bullet$\large{Curious}\\
+	\begin{itemize}
+	\item Confident \\
+ 	\item Problem Solving\\
+	\item Motivated\\ 
+	\item Curious\\
 	\columnbreak
-	$\bullet$\large{Persistent} \\
-	$\bullet$\large{Teamwork}\\
-	$\bullet$\large{Self-managment}\\
+	\item Persistent \\
+	\item Teamwork\\
+	\item Self-managment\\
+	\end{itemize}
 	\end{multicols}
 
 
