--- a/Resume.tex
+++ b/Resume.tex
@@ -13,7 +13,7 @@
 %section
 
 \titleformat{\section}
-{\Large \bfseries \uppercase}
+{ \bfseries \uppercase}
 {\hspace{-.25in}\thesection}
 {0em}
 {. }[\titlerule]
@@ -112,6 +112,8 @@ To seek a challenging position as a Machine Learning Engineering with an organiz
 \hline
 	B.E Computer Engineering & Pimpri Chinchawad College of Engineering ,Pune & SPPU & 2021 & -- \\
 \hline
+	First Year & Pimpri Chinchawad College of Engineering ,Pune & SPPU & 2018 & 9.48 CGPA \\
+\hline
 	H.S.C & Ashoka Universal School and Jr.College,Nashik & ISC & 2017 & 83.60 \\
 \hline
 	S.S.C & Sacred Heart Convent High School, Nashik & S.S.C & 2015 & 91.00\\
@@ -119,13 +121,37 @@ To seek a challenging position as a Machine Learning Engineering with an organiz
 \end{tabular} 
 
 \section{Projects}
-	
+	\begin{enumerate}
+		\item E-yantra Project Based Competition: Project on Animal home coming. Where animals and Habitates are extracted from image and than image is feed to deep learning model which classifies the animal and maps the animal to there habitate. This data is later transfered to a bot which searches the minimum path for reaching to animal, Pick the animal and place it in respective habitate.
+			\begin{itemize}
+			\item Languages Used: Python , C, C++
+			\item Technologies Used: PyTorch , Atmega 2560, OpenCV, Atmel Studio, 
+			
+			\end{itemize}
+		\item Android Attendace App with Firebase support: Android app which helps manage College Attendace of students.
+			\begin{itemize}
+			\item Languages Used: Java, XML.
+			\item Technologies Used: Android Studio, Firebase by Google. 
+			
+			\end{itemize}
+		\item Airship shooting Game:  A Game based on python.  where player has to control airship movement and the firing way of the airship. Player with maximum Score wins.
+			\begin{itemize}
+			\item Languages Used: Python.
+			\item Technologies Used: PyGame , Visual Studio. 
+			
+			\end{itemize}
+  
+	\end{enumerate}
 
 
 \section{Training \& Internship}
+\subsection{Training:}
+\begin{enumerate}
+\item
+\end{enumerate}
 
 \section{Research publications}
-
+	NONE.
 \section{Technical Skills}
 	\subsection{Languages:}
 		\subsubsection{Programming Languages: }
