Training And Intership Added

--- a/Resume.tex
+++ b/Resume.tex
@@ -147,8 +147,13 @@ To seek a challenging position as a Machine Learning Engineering with an organiz
 \section{Training \& Internship}
 \subsection{Training:}
 \begin{enumerate}
-\item
+\item Project based Learning By Eyantra,IIT Bombay.
+\item Hands On Training For Internet Of things and Robotics by Microsoft and IIT bombay.
+\item Hands On Training For Android by Skylabs and IIT hyderabad.
+\item Artifical Intelligence and Machine Learning Workshop At PCCOE, Pune. 
 \end{enumerate}
+\subsection{Internship:}
+NONE
 
 \section{Research publications}
 	NONE.
