--- a/Resume.tex
+++ b/Resume.tex
@@ -167,22 +167,29 @@ NONE
 			PyTorch,Tensorflow,Keras, OpenCV,Android Studio,Atmel Studio,Arduino
 
 \section{Soft Skills}
-	\begin{multicols}{2}
+	\begin{multicols}{3}
 	\begin{itemize}
 	\item Confident \\
  	\item Problem Solving\\
 	\item Motivated\\ 
-	\item Curious\\
 	\columnbreak
+	\item Curious\\
 	\item Persistent \\
 	\item Teamwork\\
+	\columnbreak
 	\item Self-managment\\
+	\item Leadership
 	\end{itemize}
 	\end{multicols}
 
 
 \section{Extra-curricular Activities}
-
+\begin{enumerate}
+\item Is a member of Compter Engineering Student Association and ACM Student Chapter at Computer Depatment,PCCOE, Pune.
+\item Currently working with 72 people as Volunteer at Training and Placement Cell, PCCOE.
+\item Worked as volunteer For Spectrum, an event organized by PCCOE, where people.  A massive crowd of around 500 - 700 people, students all over pune gathered for participating in various competitons.
+\item Worked with Training and placement Cell, PCCOE for handling various Job Drives including both on-campus and off-campus drives.
+\end{enumerate}
 
 
 \section{co-curricular activities}
