Minor Changes and added Co-cur Activities

--- a/Resume.tex
+++ b/Resume.tex
@@ -66,7 +66,7 @@ Github: \url{https://github.com/Aditya-Bichave}
 \end{flushright}
 \noindent
 \hspace{10em}
-\includegraphics[width = 8em]{Aditya.jpg}
+\includegraphics[width = 6.2em]{Aditya.jpg}
 
 \end{multicols}
 
@@ -193,7 +193,13 @@ NONE
 
 
 \section{co-curricular activities}
-
+\begin{enumerate}
+\item Secure 3rd place in C - Coder event PICT,Pune.
+\item Currently enrolled in Core Java.
+\item Completed Python Courses , Sympy,pygame, 
+\item Completed Coursra Machine Learning course By Andrew NG. 
+\item Curently pursuing PyTorch tutorials from Pytorch official website, also Referring to various other resourses for accumalating more knowledge on Deep Learning.
+\end{enumerate}
 
 
 \section{Personal Details} 
