Ref,Date and Declaration Added

--- a/Resume.tex
+++ b/Resume.tex
@@ -1,4 +1,4 @@
-\documentclass[10pt]{article}
+\documentclass[5pt]{article}
 
 %packages
 
@@ -214,6 +214,21 @@ NONE
 
 \end{itemize}
 
+%Ref
+\noindent
+\textbf{Reference}
+\\
+Mrs Sangita Patil\\
+E-mail id: sapatil1912@gmail.com\\
+
+%decleraion
+\noindent
+\textbf{Declaration}
+\\
+I hereby declare that above-mentioned information is correct to the best of my knowledge and belief\\
+\\
+Place: Pune\\
+Date: 17-4-2019
 
 
 
