Ref,Date and Declaration Added

--- a/Resume.tex
+++ b/Resume.tex
@@ -164,7 +164,7 @@ NONE
 		\subsubsection{Markup Languages:}
 			HTML,CSS,XML
 		\subsubsection{Tools}
-			PyTorch,Tensorflow,Keras, OpenCV,Android Studio,Atmel Studio,Arduino
+			PyTorch,Tensorflow,Keras, Sklearn, OpenCV,Android Studio,Atmel Studio,Arduino, Google Colab
 
 \section{Soft Skills}
 	\begin{multicols}{3}
@@ -187,7 +187,7 @@ NONE
 \begin{enumerate}
 \item Is a member of Compter Engineering Student Association and ACM Student Chapter at Computer Depatment,PCCOE, Pune.
 \item Currently working with 72 people as Volunteer at Training and Placement Cell, PCCOE.
-\item Worked as volunteer For Spectrum, an event organized by PCCOE, where people.  A massive crowd of around 500 - 700 people, students all over pune gathered for participating in various competitons.
+\item Worked as Co-ordinator For Spectrum, an event organized by PCCOE, where people.  A massive crowd of around 500 - 700 people, students all over pune gathered for participating in various competitons.
 \item Worked with Training and placement Cell, PCCOE for handling various Job Drives including both on-campus and off-campus drives.
 \end{enumerate}
 
@@ -206,7 +206,7 @@ NONE
 \begin{itemize}
 
 \item{Father's Name: Anand Bichave}
-\item{Mother's NAme: Rashmi Bichave}
+\item{Mother's Name: Rashmi Bichave}
 \item{Sex: Male}
 \item{Date Of Birth: 9th April, 1999}
 \item{Nationality: Indian}
@@ -228,7 +228,7 @@ E-mail id: sapatil1912@gmail.com\\
 I hereby declare that above-mentioned information is correct to the best of my knowledge and belief\\
 \\
 Place: Pune\\
-Date: 17-4-2019
+Date: 17 April ,2019
 
 
 
