Ref,Date and Declaration Added

--- a/Resume.tex
+++ b/Resume.tex
@@ -187,7 +187,7 @@ NONE
 \begin{enumerate}
 \item Is a member of Compter Engineering Student Association and ACM Student Chapter at Computer Depatment,PCCOE, Pune.
 \item Currently working with 72 people as Volunteer at Training and Placement Cell, PCCOE.
-\item Worked as Co-ordinator For Spectrum, an event organized by PCCOE, where people.  A massive crowd of around 500 - 700 people, students all over pune gathered for participating in various competitons.
+\item Worked as Co-ordinator For Spectrum, an event organized by PCCOE.  A massive crowd of around 500 - 700 people \& students all over pune gathered for participating in various competition .
 \item Worked with Training and placement Cell, PCCOE for handling various Job Drives including both on-campus and off-campus drives.
 \end{enumerate}
 
